APIs/googleapis.com/tagmanager/v1/java-client/README.md
# openapi-java-client

Tag Manager API
- API version: v1
  - Build date: 2024-10-12T11:34:32.046805-04:00[America/New_York]
  - Generator version: 7.9.0

This API allows clients to access and modify container and tag configuration.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://tagmanager.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    String accountId = "accountId_example"; // String | The GTM Account ID.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Container container = new Container(); // Container | 
    try {
      Container result = apiInstance.tagmanagerAccountsContainersCreate(accountId, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, container);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#tagmanagerAccountsContainersCreate");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**tagmanagerAccountsContainersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers | 
*AccountsApi* | [**tagmanagerAccountsContainersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsList**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersEntitiesList**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersEntitiesList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId}/entities | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersList**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*AccountsApi* | [**tagmanagerAccountsContainersFoldersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanagerAccountsContainersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersList**](docs/AccountsApi.md#tagmanagerAccountsContainersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers | 
*AccountsApi* | [**tagmanagerAccountsContainersMoveFoldersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersMoveFoldersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/move_folders/{folderId} | 
*AccountsApi* | [**tagmanagerAccountsContainersReauthorizeEnvironmentsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersReauthorizeEnvironmentsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/reauthorize_environments/{environmentId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTagsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*AccountsApi* | [**tagmanagerAccountsContainersTagsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTagsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTagsList**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*AccountsApi* | [**tagmanagerAccountsContainersTagsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTriggersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*AccountsApi* | [**tagmanagerAccountsContainersTriggersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTriggersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersTriggersList**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*AccountsApi* | [**tagmanagerAccountsContainersTriggersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*AccountsApi* | [**tagmanagerAccountsContainersVariablesDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVariablesGet**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*AccountsApi* | [**tagmanagerAccountsContainersVariablesUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsList**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsPublish**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsPublish) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/publish | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsRestore**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsRestore) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/restore | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsUndelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUndelete) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/undelete | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanagerAccountsGet**](docs/AccountsApi.md#tagmanagerAccountsGet) | **GET** /tagmanager/v1/accounts/{accountId} | 
*AccountsApi* | [**tagmanagerAccountsList**](docs/AccountsApi.md#tagmanagerAccountsList) | **GET** /tagmanager/v1/accounts | 
*AccountsApi* | [**tagmanagerAccountsPermissionsCreate**](docs/AccountsApi.md#tagmanagerAccountsPermissionsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/permissions | 
*AccountsApi* | [**tagmanagerAccountsPermissionsDelete**](docs/AccountsApi.md#tagmanagerAccountsPermissionsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanagerAccountsPermissionsGet**](docs/AccountsApi.md#tagmanagerAccountsPermissionsGet) | **GET** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanagerAccountsPermissionsList**](docs/AccountsApi.md#tagmanagerAccountsPermissionsList) | **GET** /tagmanager/v1/accounts/{accountId}/permissions | 
*AccountsApi* | [**tagmanagerAccountsPermissionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsPermissionsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanagerAccountsUpdate**](docs/AccountsApi.md#tagmanagerAccountsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId} | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountAccess](docs/AccountAccess.md)
 - [Condition](docs/Condition.md)
 - [Container](docs/Container.md)
 - [ContainerAccess](docs/ContainerAccess.md)
 - [ContainerVersion](docs/ContainerVersion.md)
 - [ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [Environment](docs/Environment.md)
 - [Folder](docs/Folder.md)
 - [FolderEntities](docs/FolderEntities.md)
 - [ListAccountUsersResponse](docs/ListAccountUsersResponse.md)
 - [ListAccountsResponse](docs/ListAccountsResponse.md)
 - [ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [ListContainersResponse](docs/ListContainersResponse.md)
 - [ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListTagsResponse](docs/ListTagsResponse.md)
 - [ListTriggersResponse](docs/ListTriggersResponse.md)
 - [ListVariablesResponse](docs/ListVariablesResponse.md)
 - [Macro](docs/Macro.md)
 - [Parameter](docs/Parameter.md)
 - [PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [Rule](docs/Rule.md)
 - [SetupTag](docs/SetupTag.md)
 - [Tag](docs/Tag.md)
 - [TeardownTag](docs/TeardownTag.md)
 - [Trigger](docs/Trigger.md)
 - [UserAccess](docs/UserAccess.md)
 - [Variable](docs/Variable.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



