APIs/googleapis.com/tagmanager/v2/java-client/README.md
# openapi-java-client

Tag Manager API
- API version: v2
  - Build date: 2024-10-12T11:34:30.823247-04:00[America/New_York]
  - Generator version: 7.9.0

This API allows clients to access and modify container and tag configuration.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.AccountsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://tagmanager.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    AccountsApi apiInstance = new AccountsApi(defaultClient);
    String path = "path_example"; // String | GTM Container's API relative path. Example: accounts/{account_id}/containers/{container_id}
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    Boolean allowUserPermissionFeatureUpdate = true; // Boolean | Must be set to true to allow features.user_permissions to change from false to true. If this operation causes an update but this bit is false, the operation will fail.
    String containerId = "containerId_example"; // String | ID of container that will be merged into the current container.
    String settingSource = "settingSourceUnspecified"; // String | Specify the source of config setting after combine
    try {
      Container result = apiInstance.tagmanagerAccountsContainersCombine(path, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, allowUserPermissionFeatureUpdate, containerId, settingSource);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling AccountsApi#tagmanagerAccountsContainersCombine");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**tagmanagerAccountsContainersCombine**](docs/AccountsApi.md#tagmanagerAccountsContainersCombine) | **POST** /tagmanager/v2/{path}:combine | 
*AccountsApi* | [**tagmanagerAccountsContainersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersCreate) | **POST** /tagmanager/v2/{parent}/containers | 
*AccountsApi* | [**tagmanagerAccountsContainersDestinationsLink**](docs/AccountsApi.md#tagmanagerAccountsContainersDestinationsLink) | **POST** /tagmanager/v2/{parent}/destinations:link | 
*AccountsApi* | [**tagmanagerAccountsContainersDestinationsList**](docs/AccountsApi.md#tagmanagerAccountsContainersDestinationsList) | **GET** /tagmanager/v2/{parent}/destinations | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsCreate) | **POST** /tagmanager/v2/{parent}/environments | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsList**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsList) | **GET** /tagmanager/v2/{parent}/environments | 
*AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsReauthorize**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsReauthorize) | **POST** /tagmanager/v2/{path}:reauthorize | 
*AccountsApi* | [**tagmanagerAccountsContainersList**](docs/AccountsApi.md#tagmanagerAccountsContainersList) | **GET** /tagmanager/v2/{parent}/containers | 
*AccountsApi* | [**tagmanagerAccountsContainersLookup**](docs/AccountsApi.md#tagmanagerAccountsContainersLookup) | **GET** /tagmanager/v2/accounts/containers:lookup | 
*AccountsApi* | [**tagmanagerAccountsContainersMoveTagId**](docs/AccountsApi.md#tagmanagerAccountsContainersMoveTagId) | **POST** /tagmanager/v2/{path}:move_tag_id | 
*AccountsApi* | [**tagmanagerAccountsContainersSnippet**](docs/AccountsApi.md#tagmanagerAccountsContainersSnippet) | **GET** /tagmanager/v2/{path}:snippet | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionHeadersLatest**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionHeadersLatest) | **GET** /tagmanager/v2/{parent}/version_headers:latest | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionHeadersList**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionHeadersList) | **GET** /tagmanager/v2/{parent}/version_headers | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsLive**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsLive) | **GET** /tagmanager/v2/{parent}/versions:live | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsPublish**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsPublish) | **POST** /tagmanager/v2/{path}:publish | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsSetLatest**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsSetLatest) | **POST** /tagmanager/v2/{path}:set_latest | 
*AccountsApi* | [**tagmanagerAccountsContainersVersionsUndelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUndelete) | **POST** /tagmanager/v2/{path}:undelete | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesCreate) | **POST** /tagmanager/v2/{parent}/built_in_variables | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesList) | **GET** /tagmanager/v2/{parent}/built_in_variables | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesRevert**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesRevert) | **POST** /tagmanager/v2/{path}/built_in_variables:revert | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesClientsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesClientsCreate) | **POST** /tagmanager/v2/{parent}/clients | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesClientsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesClientsList) | **GET** /tagmanager/v2/{parent}/clients | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesCreate) | **POST** /tagmanager/v2/{parent}/workspaces | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesCreateVersion**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesCreateVersion) | **POST** /tagmanager/v2/{path}:create_version | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersCreate) | **POST** /tagmanager/v2/{parent}/folders | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersEntities**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersEntities) | **POST** /tagmanager/v2/{path}:entities | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersList) | **GET** /tagmanager/v2/{parent}/folders | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersMoveEntitiesToFolder**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersMoveEntitiesToFolder) | **POST** /tagmanager/v2/{path}:move_entities_to_folder | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGetStatus**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGetStatus) | **GET** /tagmanager/v2/{path}/status | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGtagConfigCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGtagConfigCreate) | **POST** /tagmanager/v2/{parent}/gtag_config | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGtagConfigList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGtagConfigList) | **GET** /tagmanager/v2/{parent}/gtag_config | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesList) | **GET** /tagmanager/v2/{parent}/workspaces | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesQuickPreview**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesQuickPreview) | **POST** /tagmanager/v2/{path}:quick_preview | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesResolveConflict**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesResolveConflict) | **POST** /tagmanager/v2/{path}:resolve_conflict | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesSync**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesSync) | **POST** /tagmanager/v2/{path}:sync | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTagsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTagsCreate) | **POST** /tagmanager/v2/{parent}/tags | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTagsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTagsList) | **GET** /tagmanager/v2/{parent}/tags | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTemplatesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTemplatesCreate) | **POST** /tagmanager/v2/{parent}/templates | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTemplatesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTemplatesList) | **GET** /tagmanager/v2/{parent}/templates | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTransformationsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTransformationsCreate) | **POST** /tagmanager/v2/{parent}/transformations | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTransformationsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTransformationsList) | **GET** /tagmanager/v2/{parent}/transformations | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTriggersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTriggersCreate) | **POST** /tagmanager/v2/{parent}/triggers | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTriggersList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTriggersList) | **GET** /tagmanager/v2/{parent}/triggers | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesVariablesCreate) | **POST** /tagmanager/v2/{parent}/variables | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesVariablesList) | **GET** /tagmanager/v2/{parent}/variables | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesCreate) | **POST** /tagmanager/v2/{parent}/zones | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesList) | **GET** /tagmanager/v2/{parent}/zones | 
*AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesRevert**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesRevert) | **POST** /tagmanager/v2/{path}:revert | 
*AccountsApi* | [**tagmanagerAccountsList**](docs/AccountsApi.md#tagmanagerAccountsList) | **GET** /tagmanager/v2/accounts | 
*AccountsApi* | [**tagmanagerAccountsUserPermissionsCreate**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsCreate) | **POST** /tagmanager/v2/{parent}/user_permissions | 
*AccountsApi* | [**tagmanagerAccountsUserPermissionsDelete**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsDelete) | **DELETE** /tagmanager/v2/{path} | 
*AccountsApi* | [**tagmanagerAccountsUserPermissionsGet**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsGet) | **GET** /tagmanager/v2/{path} | 
*AccountsApi* | [**tagmanagerAccountsUserPermissionsList**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsList) | **GET** /tagmanager/v2/{parent}/user_permissions | 
*AccountsApi* | [**tagmanagerAccountsUserPermissionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsUpdate) | **PUT** /tagmanager/v2/{path} | 


## Documentation for Models

 - [Account](docs/Account.md)
 - [AccountAccess](docs/AccountAccess.md)
 - [AccountFeatures](docs/AccountFeatures.md)
 - [BuiltInVariable](docs/BuiltInVariable.md)
 - [Client](docs/Client.md)
 - [Condition](docs/Condition.md)
 - [Container](docs/Container.md)
 - [ContainerAccess](docs/ContainerAccess.md)
 - [ContainerFeatures](docs/ContainerFeatures.md)
 - [ContainerVersion](docs/ContainerVersion.md)
 - [ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [CreateBuiltInVariableResponse](docs/CreateBuiltInVariableResponse.md)
 - [CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [CustomTemplate](docs/CustomTemplate.md)
 - [Destination](docs/Destination.md)
 - [Entity](docs/Entity.md)
 - [Environment](docs/Environment.md)
 - [Folder](docs/Folder.md)
 - [FolderEntities](docs/FolderEntities.md)
 - [GalleryReference](docs/GalleryReference.md)
 - [GetContainerSnippetResponse](docs/GetContainerSnippetResponse.md)
 - [GetWorkspaceStatusResponse](docs/GetWorkspaceStatusResponse.md)
 - [GtagConfig](docs/GtagConfig.md)
 - [ListAccountsResponse](docs/ListAccountsResponse.md)
 - [ListClientsResponse](docs/ListClientsResponse.md)
 - [ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [ListContainersResponse](docs/ListContainersResponse.md)
 - [ListDestinationsResponse](docs/ListDestinationsResponse.md)
 - [ListEnabledBuiltInVariablesResponse](docs/ListEnabledBuiltInVariablesResponse.md)
 - [ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListGtagConfigResponse](docs/ListGtagConfigResponse.md)
 - [ListTagsResponse](docs/ListTagsResponse.md)
 - [ListTemplatesResponse](docs/ListTemplatesResponse.md)
 - [ListTransformationsResponse](docs/ListTransformationsResponse.md)
 - [ListTriggersResponse](docs/ListTriggersResponse.md)
 - [ListUserPermissionsResponse](docs/ListUserPermissionsResponse.md)
 - [ListVariablesResponse](docs/ListVariablesResponse.md)
 - [ListWorkspacesResponse](docs/ListWorkspacesResponse.md)
 - [ListZonesResponse](docs/ListZonesResponse.md)
 - [MergeConflict](docs/MergeConflict.md)
 - [Parameter](docs/Parameter.md)
 - [PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [QuickPreviewResponse](docs/QuickPreviewResponse.md)
 - [RevertBuiltInVariableResponse](docs/RevertBuiltInVariableResponse.md)
 - [RevertClientResponse](docs/RevertClientResponse.md)
 - [RevertFolderResponse](docs/RevertFolderResponse.md)
 - [RevertTagResponse](docs/RevertTagResponse.md)
 - [RevertTemplateResponse](docs/RevertTemplateResponse.md)
 - [RevertTransformationResponse](docs/RevertTransformationResponse.md)
 - [RevertTriggerResponse](docs/RevertTriggerResponse.md)
 - [RevertVariableResponse](docs/RevertVariableResponse.md)
 - [RevertZoneResponse](docs/RevertZoneResponse.md)
 - [SetupTag](docs/SetupTag.md)
 - [SyncStatus](docs/SyncStatus.md)
 - [SyncWorkspaceResponse](docs/SyncWorkspaceResponse.md)
 - [Tag](docs/Tag.md)
 - [TagConsentSetting](docs/TagConsentSetting.md)
 - [TeardownTag](docs/TeardownTag.md)
 - [Transformation](docs/Transformation.md)
 - [Trigger](docs/Trigger.md)
 - [UserPermission](docs/UserPermission.md)
 - [Variable](docs/Variable.md)
 - [VariableFormatValue](docs/VariableFormatValue.md)
 - [Workspace](docs/Workspace.md)
 - [Zone](docs/Zone.md)
 - [ZoneBoundary](docs/ZoneBoundary.md)
 - [ZoneChildContainer](docs/ZoneChildContainer.md)
 - [ZoneTypeRestriction](docs/ZoneTypeRestriction.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



